feat: implement resource APIs
Closes #12
